--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,28 +1,35 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D6D6CE"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/player_three"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Player three"
+        android:padding="10dp"
+        android:background="@drawable/background_red_player"
+        android:textColor="@color/white"
         android:layout_marginTop="30dp"
-
         />
+
     <TextView
         android:id="@+id/player_four"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Player Four"
+        android:textAlignment="textEnd"
+        android:background="@drawable/background_yellow_player"
+        android:textColor="@color/black"
         android:layout_marginTop="30dp"
-
         />
 
 
@@ -58,11 +65,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/black_pawn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/black_pawn" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/black_pawn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/black_pawn" />
 
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -90,22 +97,26 @@
 
     <TextView
         android:id="@+id/player_one"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
+        android:background="@drawable/background_black_player"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/board_image"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Player three"
         android:layout_marginTop="10dp"
-
         />
 
     <TextView
         android:id="@+id/player_two"
-        android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_width="125dp"
+        android:layout_height="40dp"
         app:layout_constraintTop_toBottomOf="@id/board_image"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Player three"
+        android:textAlignment="textEnd"
+        android:background="@drawable/background_blue_player"
+        android:textColor="@color/white"
         android:layout_marginTop="10dp"
 
         />
@@ -113,10 +124,13 @@
 
     <TextView
         android:id="@+id/player_turn_indicator"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="250dp"
+        android:layout_height="55dp"
         android:layout_marginTop="20dp"
         android:text="Its Player1 Turn"
+        android:textSize="20dp"
+        android:padding="5dp"
+        android:textColor="@color/black"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -130,7 +144,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="44dp"
-        android:src="@drawable/die_picture"
+        android:src="@drawable/dice_picture"
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toBottomOf="@id/player_turn_indicator" />
@@ -146,5 +160,6 @@
         app:layout_constraintHorizontal_bias="0.312"
         app:layout_constraintStart_toEndOf="@id/dice_image"
         android:text="Roll the Dice"
+        android:background="@drawable/button_green"
         app:layout_constraintTop_toBottomOf="@id/player_turn_indicator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
