--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#D6D6CE"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/player_text_view"
         android:layout_width="match_parent"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:text="Players"
         android:textSize="24sp"
@@ -22,38 +24,42 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp">
+        >
+
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_width="0dp"
-            android:padding="5dp">
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:layout_gravity="center_vertical">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/nickname_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:maxLines="1"
                 android:hint="Player Name"
-                />
+                android:background="#E6E6E1"
+                android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
-
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/add_player_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Player"/>
+            android:layout_height="70dp"
+            android:background="@drawable/button_purple"
+            android:textStyle="bold"
+            android:text="Add Player" />
 
     </LinearLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/start_button"
+        android:background="@drawable/button_green"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="Start Game"/>
 
 </LinearLayout>
