--- a/app/src/main/res/layout/player_create.xml
+++ b/app/src/main/res/layout/player_create.xml
@@ -2,30 +2,41 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="wrap_content"
     android:layout_margin="4dp"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
         android:orientation="vertical"
+        android:background="#FCFFE7"
         android:weightSum="2">
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/player_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight ="1"
+            android:background="#FCFFE7"
+            android:textAlignment="center"
+            android:textStyle="bold"
             android:textSize="18sp"/>
+
+
     </LinearLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_delete"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="delete"
+        android:background="@drawable/button_red"
         android:layout_marginTop="50dp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         />
+
+
 
     <TextView
         android:id="@+id/counter"
